# advanced-project-1

./: .gitignore  CMakeLists.txt  README.md  advanced-project-1.kdev4
libs/libLAS/: CMakeLists.txt
src/: main.cpp  type_defs.h
src/classification/: classifier.cpp  classifier.h
src/io/: lasreader.cpp  lasreader.h
src/pre_processing/: preprocessor.cpp  preprocessor.h
src/segmentation/: segmenter.cpp  segmenter.h
src/tools/: downsample_las_cloud.cpp
src/visualisation/: point_cloud_renderer.cpp  point_cloud_renderer.h
